fix: overflow issue due to left attribute

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,12 +11,16 @@
 /* Global styles */
 
 /* main body text */
+html,
 body {
   font-family: "Martel Sans", sans-serif;
   font-weight: 400;
   font-style: normal;
   text-align: center;
   background-color: #FCFCFC;
+  width: 100%;
+  overflow-x: hidden;
+  /* prevent horizontal overflow */
 }
 
 /* primary header text */
@@ -163,7 +167,6 @@ h5 {
 /* TRACKER PAGE */
 header {
   background-color: rgb(255, 235, 59, 0.3);
-  /* width: 100%; */
   color: #37474F;
   padding: 10px 5px;
 }
@@ -177,6 +180,6 @@ header {
 /* category area */
 .category-area {
   position: relative;
-  left: 20%;
+  padding-left: 20%;
   text-align: left;
 }
